--- a/html1.0.2/index.html
+++ b/html1.0.2/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="PT-BR">
 <head>
+    <link rel="icon" type="imagem/png" href=".../img/icon.png" />
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +11,7 @@
 </head>
 <body>
 <div id="logo">
-        <h1>site</h1>
+    <img class="logo" src="../img/banner-lolis.jpg">
     <div id="menu-top">
         <UL>
             <li><a href="index.html">home</a></li>
@@ -44,5 +45,6 @@
    
 </div>
 </div>
+
 </body>
 </html>
