--- a/html1.0.2/cadastro.html
+++ b/html1.0.2/cadastro.html
@@ -7,19 +7,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index</title>
+    <title>Cadastro</title>
 </head>
 <body>
-<div id="logo">
-    <img class="logo" src="../img/banner-lolis.jpg">
-    <div id="menu-top">
-        <UL>
-            <li><a href="index.html">home</a></li>
-            <li><a href="login.html">login</a></li>
-            <li><a href="">noticias</a></li>
-            <li><a href="">feedback</a></li>
-        </UL>
-    </div>
+
+<div class="cont">
+
+    <form>
+        <h1 class="h1-login">Senha</h1>
+        <h1 class="h1-login">Senha</h1>
+        <h1 class="h1-login">Senha</h1>
+        <h1 class="h1-login">Senha</h1>
+        <h1 class="h1-login">Senha</h1>
+
+    </form>
 </div>
 
 </body>
