--- a/html1.0.2/index.html
+++ b/html1.0.2/index.html
@@ -11,13 +11,12 @@
 </head>
 <body>
 <div id="logo">
-    <img class="logo" src="../img/banner-lolis.jpg">
+    <center><img class="logo" src="../img/loli-banner.png"></center>
     <div id="menu-top">
         <UL>
             <li><a href="index.html">home</a></li>
             <li><a href="login.html">login</a></li>
-            <li><a href="">noticias</a></li>
-            <li><a href="">feedback</a></li>
+            
         </UL>
     </div>
 </div>
@@ -41,10 +40,11 @@
             <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio eligendi facilis quo voluptatem officia autem, repellat dolore, maiores possimus inventore cum odit. Minima ea consequatur veniam nulla eos dignissimos quaerat!</P>
 
     </div>
+    
 
    
 </div>
-</div>
+<div id="rod"></div>
 
 </body>
 </html>
